--- a/index.css
+++ b/index.css
@@ -1,111 +1,39 @@
-* {
-  margin: 0;
-  padding: 0;
+.bookings h2 {
+  padding: 1.875rem 0 1.875rem 0;
+  background-color: #495E57;
+  color: #FFFFFF;
+  text-align: center;
 }
 
-body {
-  font-family: Karla, sans-serif;
-  font-size: 1rem;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  line-height: 1.5;
-  color: #495E57;
+.bookings form {
+  margin: 0 auto 1.875rem auto;
 }
 
-header {
-  border-bottom: 1rem solid #495E57;
-}
-
-a {
-  text-decoration: none;
-  color: #495E57;
-}
-
-h1, h2 {
-  line-height: 1;
-  font-family: "Markazi Text";
-  font-weight: normal;
-}
-
-h1 {
-  font-size: 3.5rem;
-}
-
-h2 {
-  font-size: 2.5rem;
-}
-
-form {
-  max-width: 28.125rem;
-  padding: 3rem 2rem;
+.form-field {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
-}
-
-label {
+  gap: 0.5rem;
   cursor: pointer;
 }
 
-input, select {
-  height: 2.5rem;
-  padding-inline-end: 1rem;
-  padding-inline-start: 1rem;
-  outline: none;
-  border: 0.0625rem solid #E0E0E0;
-  border-radius: 0.375rem;
-  background: #FFFFFF;
-  color: #495E57;
-  cursor: pointer;
-  transition: border-color 0.3s;
+.form-field p {
+  font-size: 0.9375rem;
+  color: red;
 }
 
-input:focus, select:focus {
-  border-width: 0.125rem;
-  border-color: #495E57;
+.bookings button:disabled,
+.bookings button[disabled] {
+  background-color: #EDEFEE;
+  border-color: #EDEFEE;
+  color: #ADAFAE;
+  cursor: not-allowed;
 }
 
-label {
-  font-weight: bold;
-}
-
-button {
-  border: none;
-  cursor: pointer;
-}
-
-img {
-  max-width: 100%;
-}
-
-main > section {
-  margin-bottom: 5rem;
-}
-
-.container {
-  max-width: 61.625rem;
-  width: 90%;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.grid {
-  display: grid;
-}
-
-.button-primary {
-  padding: 0.5rem 1rem;
-  border-radius: 2rem;
-  background-color: #F4CE14;
-  color: #495E57;
-  font-weight: bold;
-  border: 0.1875rem solid #F4CE14;
-  transition: background, border, color 0.5s;
-}
-
-.button-primary:hover, 
-.button-primary:focus {
-  background-color: #495E57;
-  border-color: #495E57;
-  color: #FFFFFF;
+.confirmed-booking {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  min-height: 31.25rem;
+  padding: 1.875rem 0 1.875rem 0;
+  text-align: center;
 }
